# krono

./: CMakeLists.txt
src/: CMakeLists.txt  CategorizedLogModel.cpp  CategorizedLogModel.h  CategoryModel.cpp  CategoryModel.h  EventDelegate.cpp  EventDelegate.h  HistoryView.cpp  HistoryView.h  KronoApp.cpp  KronoApp.h  LinearBrowser.cpp  LinearBrowser.h  LinearTileDelegate.cpp  LinearTileDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RefreshJob.cpp  RefreshJob.h  TimelineSlider.cpp  TimelineSlider.h  TimelineSlider.ui  ZeitgeistModel.cpp  ZeitgeistModel.h  krono.desktop  kronoui.rc  main.cpp
